--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,3 @@
-// Удалить все эти стили
-.corner-frame { ... }
-.vector { ... }
-.vector1 { ... }
-.vector2 { ... }
-.vector3 { ... }
-.vector4 { ... }
-.vector1::before, .vector1::after { ... }
-// и так далее... 
-
 .frame-container {
   position: absolute;
   inset: 0;
@@ -93,4 +83,11 @@
   height: 2px;
   bottom: 0;
   right: 0;
-} 
+}
+
+@font-face {
+  font-family: 'tt';
+  src: url('/ttnormspro-regular.ttf') format('ttf');
+  font-weight: normal;
+  font-style: normal;
+}
