--- a/src/font/ttnormspro-regular.css
+++ b/src/font/ttnormspro-regular.css
@@ -1,10 +1,13 @@
 @font-face {
-	font-family: 'TTNormsPro-Regular';
-	src: url('../fonts/ttnormspro-regular.eot'); /* IE 9 Compatibility Mode */
-	src: url('../fonts/ttnormspro-regular.eot?#iefix') format('embedded-opentype'), /* IE < 9 */
-		url('../fonts/ttnormspro-regular.woff2') format('woff2'), /* Super Modern Browsers */
-		url('../fonts/ttnormspro-regular.woff') format('woff'), /* Firefox >= 3.6, any other modern browser */
-		url('../fonts/ttnormspro-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-		url('../fonts/ttnormspro-regular.svg#ttnormspro-regular') format('svg'); /* Chrome < 4, Legacy iOS */
-
+  font-family: 'TTNormsPro-Regular';
+  src: url('../fonts/ttnormspro-regular.eot'); /* IE 9 Compatibility Mode */
+  src:
+    url('../fonts/ttnormspro-regular.eot?#iefix') format('embedded-opentype'),
+    /* IE < 9 */ url('../fonts/ttnormspro-regular.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../fonts/ttnormspro-regular.woff')
+      format('woff'),
+    /* Firefox >= 3.6, any other modern browser */
+      url('../fonts/ttnormspro-regular.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+      url('../fonts/ttnormspro-regular.svg#ttnormspro-regular') format('svg'); /* Chrome < 4, Legacy iOS */
 }
